# Waveshare

./: README.md
PicoGo/builds/MicroPython/: Waveshare-PicoGo.uf2
PicoGo/examples/ArduinoIDE/test/: bluetooth.h  lcd.c  lcd.h  spi.pio.h  st7789_lcd.pio.h  test.ino  tracking_sensor.c  ultrasonic_sensor.c
PicoGo/examples/MicroPython/test/: bluetooth.py  frames.py  infrared.py  lcd.py  motor.py  test.py  tracking_sensor.py  ultrasonic_sensor.py
PicoGo/examples/SDK/test/: CMakeLists.txt  assets.h  main.c
PicoGo/examples/SDK/test/lcd/: CMakeLists.txt
PicoGo/src/MicroPython/: waveshare_modules.cmake
PicoGo/src/MicroPython/waveshare_battery/: battery.h
PicoGo/src/MicroPython/waveshare_bluetooth/: bluetooth.c  micropython.cmake  micropython.cmake.bak  micropython.mk  waveshare_bluetooth.c
PicoGo/src/SDK/lcd/: font24.c
PicoGo/src/SDK/tracking_sensor/: CMakeLists.txt
PicoGo/tools/: micropython-clean.sh  micropython.sh
RP2350-Touch-LCD-1.28/builds/MicroPython/: Waveshare-RP2350-Touch-LCD-1.28.uf2
RP2350-Touch-LCD-1.28/src/MicroPython/: waveshare_modules.cmake
RP2350-Touch-LCD-1.28/tools/: micropython-clean.sh  micropython.sh
RP2350-Touch-LCD-1.43/builds/MicroPython/: Waveshare-RP2350-Touch-LCD-1.43.uf2
RP2350-Touch-LCD-1.43/src/MicroPython/: waveshare_modules.cmake
RP2350-Touch-LCD-1.43/tools/: micropython-clean.sh  micropython.sh
RP2350-Touch-LCD-3.49/builds/MicroPython/: Waveshare-RP2350-Touch-LCD-3.49.uf2
RP2350-Touch-LCD-3.49/src/MicroPython/: waveshare_modules.cmake
RP2350-Touch-LCD-3.49/tools/: micropython-clean.sh  micropython.sh
(+132 files in other folders)
